--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dasmoto's Arts & Crafts</title>
+</head>
 <body>
-  <h1>ELIXIR2325</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <section>
+    <h1>Brushes</h1>
+    <figure>
+      <img src=".\resources\images\hacksaw.jpeg" alt="hacksaw image">
+      <figcaption>
+        <h2>Hacksaw Brushes</h2>
+        <p>Made of the highest quality oak, 
+          Hacksaw brushes are known for their weight
+           and ability to hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.</p>
+      </figcaption>
+    </figure>
+  </section>
 </body>
- 
 </html>
